# video-use

./: .gitignore  README.md  REAL_VIDEO_TESTING.md  TESTING_GUIDE.md  pyproject.toml
examples/: README.md  cli_examples.md  csv_batch_execution_example.py  form_data.csv  simple_example.py  test_real_video.py  test_with_sample_data.py  workflow_execution_example.py
examples/frame-extraction/: example_frame_extraction.py
tests/: test_llm_analysis.py  test_services.py
video_use/: __init__.py  cli.py  models.py  prompts.py  services.py
video_use/analysis/: __init__.py  services.py
video_use/config/: __init__.py  analysis.py  defaults.py
video_use/models/: __init__.py  api.py  video.py  workflow.py
video_use/schema/: __init__.py  models.py
video_use/services/: __init__.py  execution_service.py  video_service.py  workflow_service.py
video_use/video/: __init__.py  action_inferrer.py  analyzer.py  frame_extractor.py  ocr_service.py  service.py  ui_detector.py
